--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-    <script src="sketch.js"></script>
-    <script src="client.js"></script>
+    <script src = "https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.dev.js"></script>
+    <!-- <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script> -->
+    <!-- <script src="sketch.js"></script> -->
+    <!-- <script src="client.js"></script> -->
+    <script src = "main.js"></script>
     <script src='player.js'></script>
     <script src='ball.js'></script>
     <script src='opponent.js'></script>
