--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- <script src="sketch.js"></script> -->
     <!-- <script src="client.js"></script> -->
     <script src = "main.js"></script>
+    <!-- <input type="button" name="restart" onclick="restart()"> -->
   </head>
   <body>
   </body>
