add restart button adn mobile support

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <!-- <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script> -->
     <!-- <script src="sketch.js"></script> -->
     <!-- <script src="client.js"></script> -->
+    <p id="p"></p>
+    <script src = "mobile_check.js"></script>
     <script src = "main.js"></script>
-    <!-- <input type="button" name="restart" onclick="restart()"> -->
+    <!-- <input type="button" name="restart" onclick="restart()" style="display: block;" value="Restart"> -->
   </head>
   <body>
   </body>
